--- a/data/hitl.bib
+++ b/data/hitl.bib
@@ -1,6 +1,9 @@
-@inproceedings{gutierrez2026hitl,
-  title={An Evaluation of Hybrid Annotation Workflows on High-Ambiguity Spatiotemporal Video Footage},
-  author={Guti{\'e}rrez, Juan and Guti{\'e}rrez-Garc{\'i}a, V{\'i}ctor and Mora-S{\'a}nchez, {\'A}ngel and Rodr{\'i}guez-Jim{\'e}nez, Silvia and Blanco-Murillo, Jos{\'e} Luis},
-  booktitle={Preprint},
-  year={2026}
+@misc{guti{\'e}rrez2026evaluationhybridannotationworkflows,
+      title={An Evaluation of Hybrid Annotation Workflows on High-Ambiguity Spatiotemporal Video Footage}, 
+      author={Juan Guti{\'e}rrez and Victor Guti{\'e}rrez and {\'A}ngel Mora and Silvia Rodriguez and Jos{\'e} Luis Blanco},
+      year={2026},
+      eprint={2510.21798},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2510.21798}, 
 }
