--- a/data/panc.bib
+++ b/data/panc.bib
@@ -1,6 +1,9 @@
-@article{gutierrez2026panc,
-  title={PANC: Prior-Aware Normalized Cut for Object Segmentation},
-  author={Guti{\'e}rrez, Juan and Guti{\'e}rrez Garc{\'i}a, V{\'i}ctor and Blanco-Murillo, Jos{\'e} Luis},
-  year={2026},
-  institution={Universidad Polit{\'e}cnica de Madrid}
+@misc{guti{\'e}rrez2026pancpriorawarenormalizedcut,
+      title={PANC: Prior-Aware Normalized Cut for Object Segmentation}, 
+      author={Juan Guti{\'e}rrez and Victor Guti{\'e}rrez-Garcia and Jos{\'e} Luis Blanco-Murillo},
+      year={2026},
+      eprint={2602.06912},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2602.06912}, 
 }
